--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
   "name": "unplugin-vue-remove-attribute",
   "version": "1.0.0",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch"
   },
   "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    },
     "./vite": {
-      "require": "./dist/vite.cjs",
+      "require": "./dist/vite.js",
       "import": "./dist/vite.mjs",
       "types": "./dist/vite.d.ts"
+    },
+    "./rollup": {
+      "require": "./dist/rollup.js",
+      "import": "./dist/rollup.mjs",
+      "types": "./dist/rollup.d.ts"
     }
   },
   "typesVersions": {
