ci: fix build and lint

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup",
-    "dev": "tsup --watch"
+    "dev": "tsup --watch",
+    "lint": ""
   },
   "exports": {
     "./package.json": "./package.json",
