chore: fix lint errors

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "lint": ""
+    "lint": "eslint ."
   },
   "exports": {
     "./package.json": "./package.json",
