--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "bump": "bumpp --commit 'chore(release): %s' --tag '%s' --push"
   },
   "exports": {
     "./package.json": "./package.json",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@vospel/eslint-config": "^1.4.9",
+    "bumpp": "^8.2.1",
     "eslint": "^8.22.0",
     "tsup": "^6.2.2",
     "typescript": "^4.7.4",
