--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
     "moduleResolution": "node",
-    "module": "es2022",
-    "target": "es2017"
+    "module": "es2020",
+    "target": "es2017",
+    "lib": ["es2020"]
   },
   "include": [
     "src/**/*.ts"
