--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "lint": "eslint .",
-    "bump": "bumpp --commit 'chore(release): %s' --tag '%s' --push"
+    "bump": "bumpp --commit 'chore(release): %s' --all --tag '%s' -x 'pnpm generate:changelog' --push",
+    "generate:changelog": "conventional-changelog-cli -i CHANGELOG.md -s -p conventionalcommits && git add CHANGELOG.md'"
   },
   "exports": {
     "./package.json": "./package.json",
@@ -54,6 +55,7 @@
   "devDependencies": {
     "@vospel/eslint-config": "^1.4.9",
     "bumpp": "^8.2.1",
+    "conventional-changelog-cli": "^2.2.2",
     "eslint": "^8.22.0",
     "tsup": "^6.2.2",
     "typescript": "^4.7.4",
