--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -17,3 +17,18 @@ jobs:
 
      - name: Lint
        run: pnpm lint
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: pnpm
+
+      - name: Install
+        run: pnpm i
+
+      - name: Build
+        run: pnpm build
