test: add vitest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,11 @@
     "lib": ["es2020"]
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "test/**/*.d.ts",
+    "test/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
