--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
+    "test": "vitest run",
     "lint": "eslint .",
     "bump": "bumpp --commit 'chore(release): %s' --all --tag '%s' -x 'pnpm generate:changelog' --push",
     "generate:changelog": "conventional-changelog -i CHANGELOG.md -s -p conventionalcommits && git add CHANGELOG.md"
@@ -53,13 +54,16 @@
     "@vue/compiler-sfc": ">=3"
   },
   "devDependencies": {
+    "@vitest/coverage-c8": "^0.22.1",
     "@vospel/eslint-config": "^1.4.9",
     "bumpp": "^8.2.1",
     "conventional-changelog-cli": "^2.2.2",
     "eslint": "^8.22.0",
     "tsup": "^6.2.2",
     "typescript": "^4.7.4",
-    "vite": "^3.0.9"
+    "unplugin-auto-import": "^0.11.2",
+    "vite": "^3.0.9",
+    "vitest": "^0.22.1"
   },
   "packageManager": "pnpm@7.9.4"
 }
