--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
     "moduleResolution": "node",
     "module": "es2020",
     "target": "es2017",
-    "lib": ["es2020"]
+    "lib": ["es2020"],
+    "types": [
+      "vite/client"
+    ]
   },
   "include": [
     "src/**/*.ts",
