--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -32,3 +32,21 @@ jobs:
 
       - name: Build
         run: pnpm build
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [12, 14, 16, 18]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+          cache: pnpm
+
+      - name: Install
+        run: pnpm i
+
+      - name: Test on ${{ matrix.node }}
+        run: pnpm test
